Add back affiliation

--- a/metric-learn-jmlr.tex
+++ b/metric-learn-jmlr.tex
@@ -41,7 +41,7 @@
        \addr \todo[inline]{TODO}
        \AND
        \name Yuan Tang \email terrytangyuan@gmail.com \\
-       \addr \todo[inline]{TODO}
+       \addr Ant Financial, United States
        \AND
        \name Nathalie Vauquier \email nathalie.vauquier@inria.fr \\
        \addr INRIA, France
