Updates from Overleaf

--- a/metric-learn-jmlr.bib
+++ b/metric-learn-jmlr.bib
@@ -7,8 +7,30 @@
     primaryClass={cs.LG}
 }
 
+@book{Bellet15,
+  Author = {Aur\'elien Bellet and Amaury Habrard and Marc Sebban},
+  Date-Added = {2015-02-12 17:47:36 +0000},
+  Date-Modified = {2015-12-18 09:35:20 +0000},
+  Keywords = {metric learning},
+  Publisher = {{M}organ \& {C}laypool {P}ublishers},
+  Title = {{M}etric {L}earning},
+  Year = {2015}}
+  
+@ARTICLE{Liu19,
+  author = {Kuan Liu and Aur\'elien Bellet},
+  title = {Escaping the Curse of Dimensionality in Similarity Learning: Efficient Frank-Wolfe Algorithm and Generalization Bounds},
+  journal = {Neurocomputing},
+  year = {2019},
+  volume = {333},
+  pages = {185--199}
+}
 
-
+@inproceedings{liu15,
+  author    = {Weiwei Liu and Ivor W. Tsang},
+  title     = {Large Margin Metric Learning for Multi-Label Prediction},
+  booktitle = {AAAI},
+  year      = {2015}
+}
 
 @article{scikit-learn,
  title={Scikit-learn: Machine Learning in {P}ython},
@@ -111,10 +133,9 @@
 @inproceedings{Shental02,
 author = {Shental, Noam and Hertz, Tomer and Weinshall, Daphna and Pavel, Misha},
 year = {2002},
-month = {05},
 pages = {181-185},
 title = {Adjustment Learning and Relevant Component Analysis},
-journal = {ECCV},
+booktitle = {ECCV},
 doi = {10.1007/3-540-47979-1_52}
 }
 
@@ -232,4 +253,13 @@ month={Dec},}
   pdf = 	 {http://proceedings.mlr.press/v2/weinberger07a/weinberger07a.pdf},
   url = 	 {http://proceedings.mlr.press/v2/weinberger07a.html},
   abstract = 	 {Kernel regression is a well-established method for nonlinear regression in which the target value for a test point is estimated using a weighted average of the surrounding training samples. The weights are typically obtained by applying a distance-based kernel function to each of the samples, which presumes the existence of a well-defined distance metric. In this paper, we construct a novel algorithm for supervised metric learning, which learns a distance function by directly minimizing the leave-one-out regression error. We show that our algorithm makes kernel regression comparable with the state of the art on several benchmark datasets, and we provide efficient implementation details enabling application to datasets with  O(10k) instances. Further, we show that our algorithm can be viewed as a supervised variation of PCA and can be used for dimensionality reduction and high dimensional data visualization.}
+}
+
+
+@InProceedings{Huang12,
+  author =    {Gary B. Huang and Marwan Mattar and Honglak Lee and 
+               Erik Learned-Miller},
+  title =     {Learning to Align from Scratch},
+  booktitle = {NIPS},
+  year =      {2012}
 }
