Updates from Overleaf

--- a/metric-learn-jmlr.bib
+++ b/metric-learn-jmlr.bib
@@ -139,26 +139,16 @@ booktitle = {ECCV},
 doi = {10.1007/3-540-47979-1_52}
 }
 
-@article{Xiang08,
- author = {Xiang, Shiming and Nie, Feiping and Zhang, Changshui},
- title = {Learning a Mahalanobis Distance Metric for Data Clustering and Classification},
- journal = {Pattern Recogn.},
- issue_date = {December, 2008},
- volume = {41},
- number = {12},
- month = dec,
- year = {2008},
- issn = {0031-3203},
- pages = {3600--3612},
- numpages = {13},
- url = {http://dx.doi.org/10.1016/j.patcog.2008.05.018},
- doi = {10.1016/j.patcog.2008.05.018},
- acmid = {1405230},
- publisher = {Elsevier Science Inc.},
- address = {New York, NY, USA},
- keywords = {Data clustering, Distance metric learning, Face pose estimation, Global optimization, Interactive image segmentation, Mahalanobis distance},
-} 
-
+@inproceedings{Xing2002a,
+  Author = {Eric P. Xing and Andrew Y. Ng and Michael I. Jordan and Stuart J. Russell},
+  Booktitle = {NIPS},
+  Date-Modified = {2014-10-30 15:23:27 +0000},
+  File = {nips02-metric.pdf:/home_nfs/bellet/metric learning/mahalanobis/nips02-metric.pdf:PDF},
+  Keywords = {metric learning},
+  Owner = {bellet},
+  Timestamp = {2011.07.07},
+  Title = {{D}istance {M}etric {L}earning with {A}pplication to {C}lustering with {S}ide-{I}nformation},
+  Year = {2002}}
 
 
 @inproceedings{Qi09,
