--- a/metric-learn-jmlr.tex
+++ b/metric-learn-jmlr.tex
@@ -224,10 +224,7 @@ The current release of \texttt{metric-learn} (v.0.5.0) can be installed from the
 \texttt{metric-learn} only relies on core libraries from the SciPy ecosystem: \texttt{numpy}, \texttt{scipy}, and \texttt{scikit-learn}. The development is collaborative and open to all contributors through the usual GitHub framework (issues and pull requests). The interest of the package from the community is clear: it has been included in \texttt{scikit-learn-contrib} and, at the time of writing, has been starred more than 740 times and forked more than 170 times.
 The quality of the code is ensured by a thorough test coverage (96\% as of July 2019). Every new contribution to the code is automatically checked by a continuous integration platform that ensures a minimal test coverage of the added code, a minimal variation in test coverage of the overall project, and syntax formatting with \texttt{flake8}. %, which allows easy contribution for incoming developers, which can have their code automatically checked.
 
-Currently, \texttt{metric-learn} implements 9 popular metric learning algorithms from the literature. Supervised learners include Neighborhood Components Analysis (NCA) (\cite{Goldberger04}), Large Margin Nearest Neighbors (LMNN) (\cite{Weinberger09}), Relative Components Analysis (RCA)\footnote{Strictly speaking, RCA takes as input slightly weaker supervision in the form of \emph{chunklets} (groups of points from the same class).} (\cite{Shental02}), Local Fisher Discriminant Analysis (LFDA) (\cite{Sugiyama07}) and Metric Learning for Kernel Regression (MLKR) (\cite{Weinberger07}). Note that the latter is designed for regression problems and takes as input continuous labels. Pair learners i Mahalanobis Metric for Clustering (MMC) (\cite{Xiang08}), Sparse High-Dimensional Metric Learning (SDML) (\cite{Qi09}), Information Theoretic Metric Learning (ITML) (\cite{Davis07}). For learning on quadruplets: Metric Learning from Relative Comparisons by Minimizing Squared Residual (LSML) (\cite{Liu12}). The details description of these algorithms can be found in the sphinx documentation.
-
-\aurelien{mention flake8 compliance and checks}
-
+Currently, \texttt{metric-learn} implements 9 popular metric learning algorithms from the literature. Supervised learners include Neighborhood Components Analysis \citep[NCA,][]{Goldberger04}, Large Margin Nearest Neighbors \citep[LMNN,][]{Weinberger09}, Relative Components Analysis \citep[RCA,][]{Shental02},\footnote{Strictly speaking, RCA takes as input slightly weaker supervision in the form of \emph{chunklets} (groups of points from the same class).} Local Fisher Discriminant Analysis \citep[LFDA,][]{Sugiyama07} and Metric Learning for Kernel Regression \citep[MLKR,][]{Weinberger07}. Note that the latter is designed for regression problems and takes as input continuous labels. Pair learners include Mahalanobis Metric for Clustering (MMC) (\cite{Xing2002a}), Information Theoretic Metric Learning (ITML) (\cite{Davis07}) and Sparse High-Dimensional Metric Learning (SDML) (\cite{Qi09}). Finally, the package implements one quadruplet learner: Metric Learning from Relative Comparisons by Minimizing Squared Residual (LSML) (\cite{Liu12}). Detailed descriptions of these algorithms can be found in the package documentation.
 
 \section{Software Architecture and API}
 
