Updates from Overleaf

--- a/metric-learn-jmlr.tex
+++ b/metric-learn-jmlr.tex
@@ -229,7 +229,9 @@ Currently, \texttt{metric-learn} implements 9 popular metric learning algorithms
 \section{Software Architecture and API}
 
 \aurelien{mention optimization somewhere? rule of thumb opt parameters?}
-\texttt{metric-learn} provides a unified interface to all metric learning algorithms, including weakly supervised ones (pair and quadruplet learners) whose input format differs from the classic machine learning setting. It is designed to be fully compatible with the functionalities of \texttt{scikit-learn} \citep{scikit-learn}. We explain here how package is structured. All metric learners in \texttt{metric-learn} inherit from an abstract \texttt{BaseMetricLearner} object, which itself inherits from scikit-learn's \texttt{BaseEstimator}. All classes inheriting from \texttt{BaseMetricLearner} should implement two methods, \texttt{get\_metric} and \texttt{score\_pairs}: the former returns a function that computes the distance between two points $u$ and $v$. The latter method computes the distances between a dataset of pairs of points.
+\texttt{metric-learn} provides a unified interface to all metric learning algorithms, including weakly supervised ones (pair and quadruplet learners) whose input format differs from the classic machine learning setting. It is designed to be fully compatible with the functionalities of \texttt{scikit-learn} \citep{scikit-learn}. In this section, we briefly explain how package is structured.
+
+All metric learners in \texttt{metric-learn} inherit from an abstract \texttt{BaseMetricLearner} object, which itself inherits from scikit-learn's \texttt{BaseEstimator}. All classes inheriting from \texttt{BaseMetricLearner} should implement two methods, \texttt{get\_metric} and \texttt{score\_pairs}: the former returns a function that computes the distance between two points $u$ and $v$. The latter method computes the distances between a dataset of pairs of points.
 \aurelien{score\_pairs and get\_metric should be mentioned here (all metric learners should implement these). In Mahalanobis, just mention they are implemented accordingly (do not delete: TODO: update accordingly mahalanobis}
 % \todo[inline]{Should I talk about the classes etc ? Not useful since they are not visible by the user right ?}
 % \todo[inline]{I think it can be nice, this is not documentation, but explaining how things are coded}
